--- a/web/views/player.ejs
+++ b/web/views/player.ejs
@@ -41,7 +41,7 @@
     <div class="stats">
       <div class="stat">
         <h3>Total Activity</h3>
-        <p><%= player.total_activity || 0 %> hrs</p>
+        <p><%= player.total_activity || 0 %> minutes</p> <!-- changed from hrs to minutes -->
       </div>
       <div class="stat">
         <h3>Shifts Hosted</h3>
